# rustfrecord

./: .gitignore  Cargo.toml  README.md  build.rs  main.py  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.in  talk.html  talk.md  test_rustfrecord.py
.github/workflows/: CI.yml
src/: lib.rs  main.rs  tfrecord_reader.rs
tf_example/: .gitignore  main.py  pyproject.toml
tfrecord_reader/: Cargo.toml
tfrecord_reader/src/: lib.rs  tests.rs
