[package]
name = "rustfrecord"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rustfrecord"
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
pyo3-tch = "0.15.0"
tch = "0.15.0"

[dependencies.pyo3]
# Pin version for pyo3-tch
version = "0.18.3"
features = ["extension-module"]

[dependencies.tfrecord]
# version = "0.15.0"
path = "../../third-party/rust-tfrecord/tfrecord"
features = ["with-serde", "with-tch"]

[dependencies.flate2]
version = "1.0.28"
features = ["zlib-ng"]
default-features = false
