[project]
name = "rustfrecord"
dynamic = ["version"]
description = "Rust implementation of the TFRecord format"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "setuptools==69.2.0",
    "torch==2.2.0",
    "maturin==1.5.1",
    "patchelf==0.17.2.1",
    "pip==24.0",
    "numpy==1.26.4",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
